k8s/service-definition.yml
apiVersion: v1
kind: Service
metadata:
 namespace: virgin-pre
 name: virgin-blog-test
spec:
 type: NodePort
 selector:
  app: virgin-blog-test
 ports:
  - name: http
    protocol: TCP
    nodePort: 30163
    port: 80
